--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -10,6 +10,7 @@
     </div>
     <br>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit %>  or
+      <%= link_to "Back", admin_orders_path %>
     </div>
 <% end %>
