--- a/app/views/customer/order_forms/_items_for_nursery.html.erb
+++ b/app/views/customer/order_forms/_items_for_nursery.html.erb
@@ -6,6 +6,8 @@
     <th>Botanical Name</th>
     <th>Common Name</th>
     <th>Provenance</th>
+    <th>Region</th>
+    <th>Qty (g)</th>
     <th>Select</th>
   </tr>
   </thead>
@@ -17,6 +19,8 @@
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.plant.common_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
+        <td><%= deposit.lot_number.region %></td>
+        <td><%= [deposit.total_quantity, 0].max %></td>
         <td class="col-sm-5">
           <div class="col-sm-2">
             <%= check_box_tag "select", "", false, class: "order_item_check" %>
