--- a/app/views/admin/deposits/index.html.erb
+++ b/app/views/admin/deposits/index.html.erb
@@ -41,13 +41,15 @@
         <td><%= deposit.qty_bank %></td>
         <td><%= deposit.qty_consigned %></td>
         <td>
+          <%= link_to "Adjustments",
+                      admin_deposit_adjustments_path(q: {deposit_id_eq: deposit.id}), :class => 'btn btn-xs btn-info' %>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_deposit_path(deposit), :class => 'btn btn-mini btn-primary' %>
+                      edit_admin_deposit_path(deposit), :class => 'btn btn-xs btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_deposit_path(deposit),
                       :method => :delete,
                       :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-xs btn-danger' %>
         </td>
       </tr>
   <% end %>
