--- a/app/views/order_mailer/new_order_to_admin.text.erb
+++ b/app/views/order_mailer/new_order_to_admin.text.erb
@@ -9,7 +9,9 @@ DETAILS
 <% @order.line_items.each do |li| %>
     ================================================================
     Plant: <%= "#{li.plant.common_name} #{li.plant.species}" %>
+    <% if li.qty.present? %>
     Quantity: <%= li.qty %>grams
+    <% end %>
     Price: <%= number_to_currency li.price, precision: 2 %>
     ================================================================
 <% end %>
