adds form selection & deposit filtering

--- a/app/assets/stylesheets/v2/application.css
+++ b/app/assets/stylesheets/v2/application.css
@@ -28,6 +28,10 @@
     margin-top: 30px !important;
 }
 
+.marB20 {
+    margin-bottom: 20px !important;
+}
+
 .marB30 {
     margin-bottom: 30px !important;
 
