--- a/app/views/admin/deposits/_form.html.erb
+++ b/app/views/admin/deposits/_form.html.erb
@@ -1,65 +1,65 @@
 <%= form_for [:admin, @deposit], :html => {:class => 'form-horizontal'} do |f| %>
-    <div class="control-group">
-      <%= f.label :collector_id, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.select :collector_id, Person::Collector.all.collect { |l| [l.full_name, l.id] } %>
+    <div class="modal-body">
+      <div class="control-group">
+        <%= f.label :collector_id, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.select :collector_id, Person::Collector.all.collect { |l| [l.full_name, l.id] } %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :lot_number_id, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.select :lot_number_id, LotNumber.order("number asc").collect { |l| [l.display, l.id, {"data-content" => [l.region, l.provenance, l.location, l.spa_name].delete_if { |c| c.blank? }.join(', '),
-                                                                                                    "data-provenance" => l.provenance,
-                                                                                                    "data-location" => l.location,
-                                                                                                    "data-spa-name" => l.spa_name}] }, {}, class: "content_select", "data-target" => "#lot_number_details" %>
-        <div id="lot_number_details"></div>
+      <div class="control-group">
+        <%= f.label :lot_number_id, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.select :lot_number_id, LotNumber.order("number asc").collect { |l| [l.display, l.id, {"data-content" => [l.region, l.provenance, l.location, l.spa_name].delete_if { |c| c.blank? }.join(', '),
+                                                                                                      "data-provenance" => l.provenance,
+                                                                                                      "data-location" => l.location,
+                                                                                                      "data-spa-name" => l.spa_name}] }, {}, class: "content_select", "data-target" => "#lot_number_details" %>
+          <div id="lot_number_details"></div>
+        </div>
       </div>
-    </div>
-    <div class="control-group">
-      <%= f.label :plant_id, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.select :plant_id, Plant.order("species asc").collect { |p| [p.species, p.id, {'data-content' => p.common_name}] }, {}, class: "content_select", "data-target" => "#plant_details" %>
-        <div id="plant_details"></div>
+      <div class="control-group">
+        <%= f.label :plant_id, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.select :plant_id, Plant.order("species asc").collect { |p| [p.species, p.id, {'data-content' => p.common_name}] }, {}, class: "content_select", "data-target" => "#plant_details" %>
+          <div id="plant_details"></div>
+        </div>
       </div>
-    </div>
-    <div class="control-group">
-      <%= f.label :date, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.date_select :date, :class => 'date_select', :order => [:day, :month, :year] %>
+      <div class="control-group">
+        <%= f.label :date, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.date_select :date, :class => 'date_select', :order => [:day, :month, :year] %>
+        </div>
       </div>
-    </div>
-    <div class="control-group">
-      <%= f.label :qty_bank, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :qty_bank %>
+      <div class="control-group">
+        <%= f.label :qty_bank, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :qty_bank %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :qty_consigned, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :qty_consigned %>
+      <div class="control-group">
+        <%= f.label :qty_consigned, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :qty_consigned %>
+        </div>
       </div>
-    </div>
-    <div class="control-group">
-      <%= f.label :qty_onhold, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :qty_onhold %>
+      <div class="control-group">
+        <%= f.label :qty_onhold, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :qty_onhold %>
+        </div>
       </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :comments, "Comment", :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_area :comments, rows: 4, cols:30 %>
+      <div class="control-group">
+        <%= f.label :comments, "Comment", :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_area :comments, rows: 4, cols: 30 %>
+        </div>
       </div>
     </div>
-    <br>
-    <div class="form-actions">
+    <div class="modal-footer">
+      <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
       <%= f.submit "Save", :class => 'btn btn-primary' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  admin_deposits_path, :class => 'btn' %>
     </div>
 <% end %>
 <script>
