--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -1,17 +1,19 @@
 <%- model_class = LotNumber -%>
-<div class="page-header">
-  <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%= link_to t('.new', :default => t("helpers.links.new")),
-              new_admin_lot_number_path,
-              :class => 'btn btn-primary pull-right' %>
-  <%= search_form_for [:admin, @search] do |f| %>
-      <%= f.text_field "number_eq", placeholder: "Number" %> and
-      <%= f.text_field "region_or_spa_name_or_location_or_provenance_cont", placeholder: "Region, SPA name etc." %>
-      <%= (f.hidden_field :type_cont) rescue "" %>
-      <%= f.submit "Search", class: "btn btn-small" %>
-  <% end %>
-</div>
-<table class="table table-striped" id="table-1">
+<%= content_for :page_link do %>
+    <%= link_to t('.new', :default => t("helpers.links.new")),
+                new_admin_lot_number_path,
+                :class => 'btn btn-primary pull-right', remote: true %>
+<% end %>
+<%= content_for :page_title, "Lot Numbers" %>
+
+<%= search_form_for [:admin, @search] do |f| %>
+    <%= f.text_field "number_eq", placeholder: "Number" %> and
+    <%= f.text_field "region_or_spa_name_or_location_or_provenance_cont", placeholder: "Region, SPA name etc." %>
+    <%= (f.hidden_field :type_cont) rescue "" %>
+    <%= f.submit "Search", class: "btn btn-sm" %>
+<% end %>
+
+<table class="table table-striped marT30" id="table-1">
   <thead>
   <tr>
     <th><%= sort_link @search, :number %></th>
@@ -34,12 +36,12 @@
         <td><%= lot_number.location %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_lot_number_path(lot_number), :class => 'btn btn-mini btn-primary' %>
+                      edit_admin_lot_number_path(lot_number), :class => 'btn btn-xs btn-primary', remote: true %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_lot_number_path(lot_number),
                       :method => :delete,
                       :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-xs btn-danger' %>
         </td>
       </tr>
   <% end %>
