--- a/app/views/admin/orders/_previous_orders.html.erb
+++ b/app/views/admin/orders/_previous_orders.html.erb
@@ -20,7 +20,7 @@
         <td><%= format_date order.created_at %></td>
         <td>
           <%= link_to((order.pending? ? "Edit" : "Details"),
-                      edit_admin_order_path(order), :class => 'btn btn-mini btn-primary') %>
+                      edit_admin_order_path(order), :class => 'btn btn-xs btn-primary') %>
         </td>
       </tr>
   <% end %>
