--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,11 +5,8 @@
                 "#selectModal", "data-toggle" => "modal",
                 :class => 'btn btn-primary pull-right' %>
 <% end %>
-
 <%= content_for :page_title, "Orders" %>
-
 <%= render partial: "admin/shared/selection_modal" %>
-
 <%= render partial: "shared/advanced_search", locals: {name: "state_or_number_or_customer_full_name_cont", html_options: {placeholder: "Search..."}} %>
 
 <table class="table table-striped" id="table-1">
@@ -33,12 +30,7 @@
         <td><%= format_date order.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_order_path(order), :class => 'btn btn-mini btn-primary' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_order_path(order),
-                      :method => :delete,
-                      :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
-                      :class => 'btn btn-mini btn-danger' %>
+                      edit_admin_order_path(order), :class => 'btn btn-xs btn-primary' %>
         </td>
       </tr>
   <% end %>
