--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -1,13 +1,15 @@
 <%- model_class = Person -%>
-<div class="page-header">
-  <h1><%= @type + "s" rescue "People" %></h1>
 
-  <%= link_to t('.new', :default => t("helpers.links.new")),
-              new_admin_person_path(type: @type),
-              :class => 'btn btn-primary pull-right' %>
-  <%= render partial: "shared/advanced_search", locals: {name: "full_name_cont", html_options: {placeholder: "Search..."}} %>
-</div>
-<table class="table table-striped" id="table-1">
+<%= content_for :page_link do %>
+    <%= link_to t('.new', :default => t("helpers.links.new")),
+                new_admin_person_path(type: @type), remote: true,
+                :class => 'btn btn-primary pull-right' %>
+<% end %>
+<%= content_for :page_title, (@type + "s" rescue "People") %>
+
+<%= render partial: "shared/advanced_search", locals: {name: "full_name_cont", html_options: {placeholder: "Search..."}} %>
+
+<table class="table table-striped marT30" id="table-1">
   <thead>
   <tr>
     <th><%= model_class.human_attribute_name(:first_name) %></th>
@@ -34,12 +36,12 @@
         <td><%= person.phone %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_person_path(person, q: {type_cont: (params[:q][:type_cont] rescue "")}), :class => 'btn btn-mini btn-primary' %>
+                      edit_admin_person_path(person, q: {type_cont: (params[:q][:type_cont] rescue "")}), remote: true, :class => 'btn btn-xs btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_person_path(person, q: {type_cont: (params[:q][:type_cont] rescue "")}),
                       :method => :delete,
                       :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-xs btn-danger' %>
         </td>
       </tr>
   <% end %>
