--- a/app/views/admin/plants/_form.html.erb
+++ b/app/views/admin/plants/_form.html.erb
@@ -1,63 +1,63 @@
 <%= form_for [:admin, @plant], :html => {:class => 'form-horizontal'} do |f| %>
-    <div class="control-group">
-      <%= f.label :species, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :species, :class => 'text_field' %>
+    <div class="modal-body">
+      <div class="control-group">
+        <%= f.label :species, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :species, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :common_name, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :common_name, :class => 'text_field' %>
+        </div>
+      </div>
+      <div class="control-group">
+        <%= f.label :price_paid, :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :price_paid, :class => 'text_field change_level_prices' %>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= f.label :level_1_price, "1-49g", :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :level_1_price, :class => 'text_field level_1_price level_prices', data: {multiplier: 1.92} %>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= f.label :level_2_price, "50-499g", :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :level_2_price, :class => 'text_field level_2_price level_prices', data: {multiplier: 1.44} %>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <%= f.label :level_3_price, ">500g", :class => 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :level_3_price, :class => 'text_field level_3_price level_prices', data: {multiplier: 1.2} %>
+        </div>
+      </div>
+
+
+      <div class="control-group">
+        <%= f.label :direct_seedable, :class => 'control-label' %>
+        <div class="controls">
+          <label>
+            <%= f.radio_button :direct_seedable, true %>  Yes
+          </label>
+
+          <label>
+            <%= f.radio_button :direct_seedable, false %> No
+          </label>
+        </div>
       </div>
     </div>
-    <div class="control-group">
-      <%= f.label :common_name, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :common_name, :class => 'text_field' %>
-      </div>
-    </div>
-    <div class="control-group">
-      <%= f.label :price_paid, :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :price_paid, :class => 'text_field change_level_prices' %>
-      </div>
-    </div>
 
-    <div class="control-group">
-      <%= f.label :level_1_price, "1-49g", :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :level_1_price, :class => 'text_field level_1_price level_prices', data: {multiplier: 1.92} %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <%= f.label :level_2_price, "50-499g", :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :level_2_price, :class => 'text_field level_2_price level_prices', data: {multiplier: 1.44} %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <%= f.label :level_3_price, ">500g", :class => 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :level_3_price, :class => 'text_field level_3_price level_prices', data: {multiplier: 1.2} %>
-      </div>
-    </div>
-
-
-    <div class="control-group">
-      <%= f.label :direct_seedable, :class => 'control-label' %>
-      <div class="controls">
-        <label>
-          <%= f.radio_button :direct_seedable, true %>  Yes
-        </label>
-
-        <label>
-          <%= f.radio_button :direct_seedable, false %> No
-        </label>
-      </div>
-    </div>
-
-
-    <div class="form-actions">
+    <div class="modal-footer">
+      <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
       <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  admin_plants_path, :class => 'btn' %>
     </div>
 <% end %>
 
@@ -67,12 +67,10 @@
             $(el).val((parseFloat($('.change_level_prices').val()) * parseFloat($(el).data('multiplier'))).toFixed(2));
         });
     };
-    $(function () {
-        $('.change_level_prices').on('change', function () {
-            changeLevelPrices()
-        });
-        $('.change_level_prices').on('keyup', function () {
-            changeLevelPrices()
-        });
+    $('.change_level_prices').on('change', function () {
+        changeLevelPrices()
+    });
+    $('.change_level_prices').on('keyup', function () {
+        changeLevelPrices()
     });
 </script>
