--- a/app/views/admin/plants/index.html.erb
+++ b/app/views/admin/plants/index.html.erb
@@ -1,12 +1,11 @@
-<%- model_class = Plant -%>
-<div class="page-header">
-  <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%= link_to t('.new', :default => t("helpers.links.new")),
-              new_admin_plant_path,
-              :class => 'btn btn-primary pull-right' %>
-  <div class="clearfix"></div>
-  <%= render partial: "shared/advanced_search", locals: {name: "species_or_common_name_cont", html_options: {placeholder: "Species or Common Name Conts"}} %>
-</div>
+<%= content_for :page_link do %>
+    <%= link_to t('.new', :default => t("helpers.links.new")),
+                new_admin_plant_path,
+                :class => 'btn btn-primary pull-right', remote: true %>
+<% end %>
+<%= content_for :page_title, "Plants" %>
+
+
 
 <table class="table table-striped" id="table-1">
   <thead>
@@ -31,12 +30,12 @@
         <td><%= number_to_currency plant.level_3_price.to_f %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_plant_path(plant), :class => 'btn btn-mini btn-primary' %>
+                      edit_admin_plant_path(plant), :class => 'btn btn-xs btn-primary', remote: true %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_plant_path(plant),
                       :method => :delete,
                       :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
-                      :class => 'btn btn-mini btn-danger' %>
+                      :class => 'btn btn-xs btn-danger' %>
         </td>
       </tr>
   <% end %>
