--- a/app/views/layouts/v2/_head.html.erb
+++ b/app/views/layouts/v2/_head.html.erb
@@ -5,20 +5,10 @@
 
 <%= yield :meta %>
 
-<!--Google Map-->
-<!--Google Map-->
 
+<meta name="author" content="Seedbank">
 
-<!--Google Map-->
-<%= javascript_include_tag "v2/main" %>
-
-<meta name="author" content="InstaKolik">
 <%= csrf_meta_tags %>
-
-<script>
-
-</script>
-
 
 <!-- Bootstrap core CSS
 ================================================== -->
@@ -33,7 +23,6 @@
 <%= stylesheet_link_tag "/assets/v2/default" %>
 
 
-
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 <%= javascript_include_tag "/assets/v2/html5shiv" %>
@@ -44,7 +33,7 @@
 <!-- JavaScript
 ================================================== -->
 
-<%= javascript_include_tag "/assets/v2/jquery-1.8.3.min" %>
+<%= javascript_include_tag "v2/main" %>
 <%= javascript_include_tag "/assets/v2/bootstrap.min" %>
 <%= javascript_include_tag "/assets/v2/jquery.bxslider-rahisified" %>
 <%= javascript_include_tag "/assets/v2/jquery.prettyPhoto" %>
@@ -55,7 +44,6 @@
 
 <!-- /JavaScript
 ================================================== -->
-
 
 
 <%= yield :head %>
