--- a/app/views/admin/deposit_adjustments/show.html.erb
+++ b/app/views/admin/deposit_adjustments/show.html.erb
@@ -1,7 +1,7 @@
 <div class="modal-body">
   <p><strong>Deposit: </strong> <%= @object.deposit.display rescue "N/A" %></p>
 
-  <p><strong>User: </strong> <%= @object.deposit.full_name rescue "N/A" %></p>
+  <p><strong>User: </strong> <%= @object.user.email rescue "N/A" %></p>
 
   <p><strong>Order #: </strong> <%= @object.line_item.order.number rescue "N/A" %></p>
 
@@ -12,6 +12,7 @@
   <p><strong>Qty On Hold: </strong><%= @object.qty_onhold.to_f %></p>
 
   <p><strong>Qty Allocated: </strong><%= @object.qty_allocated.to_f %></p>
+  <p><strong>Comment: </strong><%= @object.comment %></p>
 </div>
 
 <div class="modal-footer">
