--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -40,7 +40,7 @@
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       admin_lot_number_path(lot_number),
                       :method => :delete,
-                      :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
+                      :data => {:confirm => "All connected FDAs will be deleted. Are you sure?"},
                       :class => 'btn btn-xs btn-danger' %>
         </td>
       </tr>
