--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -49,7 +49,7 @@
 <div class="form-group">
   <%= f.label :pon, class: "col-sm-2" %>
   <div class="col-sm-8">
-    <%= f.email_field :pon, class: "form-control" %>
+    <%= f.text_field :pon, class: "form-control" %>
   </div>
 </div>
 
