--- a/app/views/customer/order_forms/_items_for_nursery.html.erb
+++ b/app/views/customer/order_forms/_items_for_nursery.html.erb
@@ -23,15 +23,15 @@
         <td><%= [deposit.total_quantity, 0].max %></td>
         <td class="col-sm-5">
           <div class="col-sm-2">
-            <%= check_box_tag "select", "", false, class: "order_item_check" %>
+            <%= check_box_tag "select", "", false, class: "order_item_check", "data-validate" => false %>
           </div>
           <div class="col-sm-10" style="display: none;">
-            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id, disabled: true %>
-            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][plant_id]", deposit.plant_id, disabled: true %>
+            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id, "data-validate" => false, disabled: true %>
+            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][plant_id]", deposit.plant_id, "data-validate" => false, disabled: true %>
             <% if grams %>
                 <%= label_tag "Grams", "Grams", class: "col-sm-4" %>
                 <div class="col-sm-8">
-                  <%= text_field_tag "order_form[order_form_items_attributes][#{deposit.id}][grams]", 0, class: "form-control", disabled: true %>
+                  <%= text_field_tag "order_form[order_form_items_attributes][#{deposit.id}][grams]", 0, class: "form-control", "data-validate" => false, disabled: true %>
                 </div>
             <% end %>
 
@@ -56,4 +56,6 @@
         });
     });
 </script>
+
+
 
