--- a/app/views/customer/order_forms/new.html.erb
+++ b/app/views/customer/order_forms/new.html.erb
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
   <%= render partial: "shared/errors", locals: {target: @current_order} %>
-  <%= form_for @current_order, url: complete_customer_order_forms_path, :as => :order_form, method: :put, validate: true, html: {class: "form-horizontal"} do |f| %>
+  <%= form_for @current_order, url: complete_customer_order_forms_path, :as => :order_form, method: :put, validate: false, html: {class: "form-horizontal"} do |f| %>
       <%= f.hidden_field :type, value: "OrderForm::#{(params[:type] || 'seeding').titleize}" %>
       <%= hidden_field_tag :type, params[:type] %>
       <%= render partial: (params[:type] || 'seeding'), locals: {f: f} %>
